k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workshop-app
  labels:
    app: workshop-app
spec:
  replicas: 2 # Run two instances for availability
  selector:
    matchLabels:
      app: workshop-app
  template:
    metadata:
      labels:
        app: workshop-app
    spec:
      containers:
        - name: workshop-app
          # IMPORTANT: The image will be dynamically replaced by the pipeline.
          # We use a placeholder here.
          image: "IMAGE_PLACEHOLDER"
          ports:
            - containerPort: 8080
      # This security context is a good practice, reinforcing our Dockerfile's non-root user.
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
