k8s/test-non-root-container-level.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-non-root-container-level
  namespace: default
spec:
  containers:
  - name: nginx
    image: nginx:1.21
    securityContext:
      runAsNonRoot: true
      runAsUser: 1000
    # This pod should be ALLOWED - non-root specified at container level
