k8s/test-non-root-pod-level.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-non-root-pod-level
  namespace: default
spec:
  securityContext:
    runAsNonRoot: true
    runAsUser: 1000
  containers:
  - name: nginx
    image: nginx:1.21
    # This pod should be ALLOWED - non-root specified at pod level
