k8s/test-root-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-root-pod
  namespace: default
spec:
  containers:
  - name: nginx
    image: nginx:1.21
    # This pod should be BLOCKED by the policy since it doesn't specify runAsNonRoot
